--- a/css/css.css
+++ b/css/css.css
@@ -1,4 +1,6 @@
 #screen{
     padding: 25px;
-    background-color: rgba(41, 144, 234, 0.84);
+    background-color: rgba(41, 144, 234, 0.69);
+    box-shadow: 5px 5px 5px #30a0db;
+    
 }
