--- a/css/css.css
+++ b/css/css.css
@@ -11,7 +11,6 @@
     display: flex;
     flex-flow: row wrap;
     width: 100%;
-    background-color: #8abae5;
     padding: 10px;
     justify-content: center;
     align-content: space-between;
@@ -22,4 +21,10 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+}
+
+body{
+    text-align: center;
+    background-color: #8abae5;
+    
 }
