--- a/css/css.css
+++ b/css/css.css
@@ -4,7 +4,9 @@
     box-shadow: 5px 5px 5px rgb(71, 74, 75);
     border: 3px double black;
     height: 100%;
-    max-width: 150px;
+    //max-width: 150px;
+    max-height: 300px;
+    overflow: scroll;
 }
 
 #topDog{
