fix the scroll bars

--- a/css/css.css
+++ b/css/css.css
@@ -4,9 +4,8 @@
     box-shadow: 5px 5px 5px rgb(71, 74, 75);
     border: 3px double black;
     height: 100%;
-    //max-width: 150px;
     max-height: 300px;
-    overflow: scroll;
+    overflow: auto;
 }
 
 #topDog{
